2012-04-03 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/estado_agente.php,
	operation/menu.php,
	godmode/agentes/agent_template.php,
	godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/agent_conf_gis.php,
	godmode/agentes/module_manager.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/manage_config_remote.php,
	godmode/menu.php: Moved manage agent view to Agent detail inside 
	Monitoring menu.

2012-04-03  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/messages/message_edit.php: Show user name
	instead id and send messages for all group.

2012-04-03 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/menu.php,
	godmode/tag/tag.php,
	godmode/tag/edit_tag.php: Moved tag menu inside Manage modules.

2012-04-03 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_menu.php: Deleted extension icon on menus.

	* extensions/extension_uploader.php: Fixed wrong link to menu for this
	extension.

	* operation/menu.php,
	godmode/menu.php: Fixed duplicated extension links on menus.

2012-04-03  Vanessa Gil  <vanessa.gil@artica.es>

	* general/header.php
	  include/functions_groups.php
	  include/functions_messages.php
	  include/javascript/jquery.pandora.js
	  operation/menu.php: Added operation: Modify sending and receiving
	messages.

	* images/email_go.png
	  images/email_edit.png
	  operation/messages/message_list.php
	  operation/messages/message_edit.php: Added files.

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	*operation/snmpconsole/snmp_view.php,
	godmode/menu.php: Fixed some errors with links to new snmp menus.

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php
	godmode/menu.php
	godmode/snmpconsole/snmp_trap_generator.php
	godmode/snmpconsole/snmp_alert.php
	godmode/snmpconsole/snmp_filters.php: Created new SNMP Console submenu
	inside monitoring item.

2012-04-02 Miguel de Dios  <miguel.dedios@artica.es>
