@@ -1,3 +1,15 @@
+2012-04-03  Sergio Martin <sergio.martin@artica.es>
+
+	* include/javascript/pandora.js
+	operation/agentes/ver_agente.php
+	godmode/massive/massive_delete_modules.php
+	godmode/massive/massive_edit_modules.php: Added the same
+	extended form of the massive edit modules to massive
+	delete modules section. Added to both a new combo to 
+	select the behavior of the multi select of agents/modules
+	selecting all or common for the result.
+	Fixed some bugs Merged from trunk
+
 2012-04-03 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* operation/agentes/estado_agente.php,
